--- a/dxapp.json
+++ b/dxapp.json
@@ -1,7 +1,7 @@
 {
-  "name": "bwa_samtools_rocksort",
-  "title": "Alignment - BWA MEM, samtools view, dx-samtools rocksort, and samtools rmdup",
-  "summary": "Aligns short sequence reads to a reference genome with BWA MEM, sorts with DNAnexus samtools rocksort, and dedups BAM files with samtools",
+  "name": "bwa_samtools_rocksort_picard",
+  "title": "Alignment - BWA MEM, samtools view, dx-samtools rocksort, and Picard MarkDuplicates",
+  "summary": "Aligns short sequence reads to a reference genome with BWA MEM, sorts with DNAnexus samtools rocksort, and dedups BAM files with Picard",
   "dxapi": "1.0.0",
   "version": "0.0.1",
   "categories": [
@@ -133,8 +133,8 @@
         "optional": true
       },
       {
-        "name": "advanced_samtools_markdups_options",
-        "label": "Advanced samtools command line options (for samtools rmdup)",
+        "name": "advanced_picard_markdups_options",
+        "label": "Advanced Picard command line options (for Picard MarkDuplicates)",
         "class": "string",
         "optional": true
       },
@@ -172,10 +172,13 @@
   ],
   "runSpec": {
     "interpreter": "python2.7",
-    "file": "src/bwa_samtools_rocksort.py",
+    "file": "src/bwa_samtools_rocksort_picard.py",
     "distribution": "Ubuntu",
     "release": "14.04",
     "execDepends": [
+      {
+        "name": "openjdk-8-jre-headless"
+      },
       {
         "name": "libgflags-dev"
       },
